Fix auto-truncation for node labels

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -352,7 +352,6 @@ h2 {
     }
 
     .node-label-wrapper {
-      display: inline-block;
       cursor: pointer;
       padding-top: 6px;
     }
